# ga-discord-bridge

./: .env.example  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: github-actions-cron.yml
examples/firebase/: README.md  main.py  requirements.txt
src/ga_discord_bridge/: __init__.py  __main__.py  config.py  digest.py  discord.py  domain.py  errors.py  format.py  ga4.py
tests/: conftest.py  test_digest.py  test_format.py  test_ga4.py
tests/samples/: discord_ga_digest_embed.json  ga4_run_report_top_channels.json  ga4_run_report_top_events.json  ga4_run_report_top_pages.json  ga4_run_report_totals.json
