[project]
name = "ga-discord-bridge"
version = "0.2.0"
description = "Post a daily Google Analytics 4 digest to a Discord channel — small, dependency-light, Cloud Function friendly."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Addryc" }]
requires-python = ">=3.11"
keywords = ["google-analytics", "ga4", "discord", "webhook", "digest", "cloud-functions"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: System :: Monitoring",
]
dependencies = [
  # The only HTTP transport — every network call (GA4, OAuth, metadata
  # server, Discord) goes through httpx and is mockable with MockTransport.
  "httpx>=0.27",
  # Used ONLY to RS256-sign the OAuth JWT assertion for service-account key
  # files; no google-auth transports, no grpc, no GA client library.
  "google-auth>=2.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/Addryc/ga-discord-bridge"
Issues = "https://github.com/Addryc/ga-discord-bridge/issues"

[project.scripts]
ga-discord-bridge = "ga_discord_bridge.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ga_discord_bridge"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
